// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Component should render initial layout 1`] = `
Array [
  <div>
    <form
        action="checkout.html"
        id="checkout_form"
        method="POST"
        onsubmit="return calculatePrice()"
    >
        <div
            className="shopping-cart"
            id="shopping_cart"
        >
            <div
                className="title"
            >
                Food Order
            </div>
            <script
                src="../js/food_order.js"
            />
            <div
                className="panel-footer"
            >
                <button
                    className="btn back-btn"
                    form="list_chefs_form"
                    type="submit"
                    value="back"
                >
                    Back
                </button>
                <button
                    className="btn next-btn"
                    form="checkout_form"
                    type="submit"
                    value="submit_order"
                >
                    Submit Order
                </button>
            </div>
        </div>
    </form>
    <form
        action="list_chefs.html"
        id="list_chefs_form"
        method="GET"
    />
</div>,
]
`;

exports[`Submit Button should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FoodOrder
    name="btn next-btn"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <form
          action="checkout.html"
          id="checkout_form"
          method="POST"
          onsubmit="return calculatePrice()"
>
          <div
                    className="shopping-cart"
                    id="shopping_cart"
          >
                    <div
                              className="title"
                    >
                              Food Order
                    </div>
                    <script
                              src="../js/food_order.js"
                    />
                    <div
                              className="panel-footer"
                    >
                              <button
                                        className="btn back-btn"
                                        form="list_chefs_form"
                                        type="submit"
                                        value="back"
                              >
                                        Back
                              </button>
                              <button
                                        className="btn next-btn"
                                        form="checkout_form"
                                        type="submit"
                                        value="submit_order"
                              >
                                        Submit Order
                              </button>
                    </div>
          </div>
</form>,
        <form
          action="list_chefs.html"
          id="list_chefs_form"
          method="GET"
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "action": "checkout.html",
          "children": <div
            className="shopping-cart"
            id="shopping_cart"
>
            <div
                        className="title"
            >
                        Food Order
            </div>
            <script
                        src="../js/food_order.js"
            />
            <div
                        className="panel-footer"
            >
                        <button
                                    className="btn back-btn"
                                    form="list_chefs_form"
                                    type="submit"
                                    value="back"
                        >
                                    Back
                        </button>
                        <button
                                    className="btn next-btn"
                                    form="checkout_form"
                                    type="submit"
                                    value="submit_order"
                        >
                                    Submit Order
                        </button>
            </div>
</div>,
          "id": "checkout_form",
          "method": "POST",
          "onsubmit": "return calculatePrice()",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="title"
>
                Food Order
</div>,
              <script
                src="../js/food_order.js"
/>,
              <div
                className="panel-footer"
>
                <button
                                className="btn back-btn"
                                form="list_chefs_form"
                                type="submit"
                                value="back"
                >
                                Back
                </button>
                <button
                                className="btn next-btn"
                                form="checkout_form"
                                type="submit"
                                value="submit_order"
                >
                                Submit Order
                </button>
</div>,
            ],
            "className": "shopping-cart",
            "id": "shopping_cart",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Food Order",
                "className": "title",
              },
              "ref": null,
              "rendered": "Food Order",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "src": "../js/food_order.js",
              },
              "ref": null,
              "rendered": null,
              "type": "script",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="btn back-btn"
                    form="list_chefs_form"
                    type="submit"
                    value="back"
>
                    Back
</button>,
                  <button
                    className="btn next-btn"
                    form="checkout_form"
                    type="submit"
                    value="submit_order"
>
                    Submit Order
</button>,
                ],
                "className": "panel-footer",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Back",
                    "className": "btn back-btn",
                    "form": "list_chefs_form",
                    "type": "submit",
                    "value": "back",
                  },
                  "ref": null,
                  "rendered": "Back",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Submit Order",
                    "className": "btn next-btn",
                    "form": "checkout_form",
                    "type": "submit",
                    "value": "submit_order",
                  },
                  "ref": null,
                  "rendered": "Submit Order",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "form",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "action": "list_chefs.html",
          "id": "list_chefs_form",
          "method": "GET",
        },
        "ref": null,
        "rendered": null,
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <form
            action="checkout.html"
            id="checkout_form"
            method="POST"
            onsubmit="return calculatePrice()"
>
            <div
                        className="shopping-cart"
                        id="shopping_cart"
            >
                        <div
                                    className="title"
                        >
                                    Food Order
                        </div>
                        <script
                                    src="../js/food_order.js"
                        />
                        <div
                                    className="panel-footer"
                        >
                                    <button
                                                className="btn back-btn"
                                                form="list_chefs_form"
                                                type="submit"
                                                value="back"
                                    >
                                                Back
                                    </button>
                                    <button
                                                className="btn next-btn"
                                                form="checkout_form"
                                                type="submit"
                                                value="submit_order"
                                    >
                                                Submit Order
                                    </button>
                        </div>
            </div>
</form>,
          <form
            action="list_chefs.html"
            id="list_chefs_form"
            method="GET"
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "action": "checkout.html",
            "children": <div
              className="shopping-cart"
              id="shopping_cart"
>
              <div
                            className="title"
              >
                            Food Order
              </div>
              <script
                            src="../js/food_order.js"
              />
              <div
                            className="panel-footer"
              >
                            <button
                                          className="btn back-btn"
                                          form="list_chefs_form"
                                          type="submit"
                                          value="back"
                            >
                                          Back
                            </button>
                            <button
                                          className="btn next-btn"
                                          form="checkout_form"
                                          type="submit"
                                          value="submit_order"
                            >
                                          Submit Order
                            </button>
              </div>
</div>,
            "id": "checkout_form",
            "method": "POST",
            "onsubmit": "return calculatePrice()",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="title"
>
                  Food Order
</div>,
                <script
                  src="../js/food_order.js"
/>,
                <div
                  className="panel-footer"
>
                  <button
                                    className="btn back-btn"
                                    form="list_chefs_form"
                                    type="submit"
                                    value="back"
                  >
                                    Back
                  </button>
                  <button
                                    className="btn next-btn"
                                    form="checkout_form"
                                    type="submit"
                                    value="submit_order"
                  >
                                    Submit Order
                  </button>
</div>,
              ],
              "className": "shopping-cart",
              "id": "shopping_cart",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Food Order",
                  "className": "title",
                },
                "ref": null,
                "rendered": "Food Order",
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "src": "../js/food_order.js",
                },
                "ref": null,
                "rendered": null,
                "type": "script",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <button
                      className="btn back-btn"
                      form="list_chefs_form"
                      type="submit"
                      value="back"
>
                      Back
</button>,
                    <button
                      className="btn next-btn"
                      form="checkout_form"
                      type="submit"
                      value="submit_order"
>
                      Submit Order
</button>,
                  ],
                  "className": "panel-footer",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Back",
                      "className": "btn back-btn",
                      "form": "list_chefs_form",
                      "type": "submit",
                      "value": "back",
                    },
                    "ref": null,
                    "rendered": "Back",
                    "type": "button",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Submit Order",
                      "className": "btn next-btn",
                      "form": "checkout_form",
                      "type": "submit",
                      "value": "submit_order",
                    },
                    "ref": null,
                    "rendered": "Submit Order",
                    "type": "button",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "form",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "action": "list_chefs.html",
            "id": "list_chefs_form",
            "method": "GET",
          },
          "ref": null,
          "rendered": null,
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
